--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -394,18 +394,32 @@
                                             <td class="yes"><i class="fa fa-check-circle"></i></td>
                                         </tr>
                                         <tr>
-                                            <td> <strong>Kodu</strong> </td>
-                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
-                                            <td class="no"><i class="fa fa-times-circle"></i></td>
-                                            <td class="no"><i class="fa fa-times-circle"></i></td>
-                                            <td class="no"><i class="fa fa-times-circle"></i></td>
-                                        </tr>
-                                        <tr>
                                             <td> <strong>Scratch</strong> </td>
                                             <td class="yes"><i class="fa fa-check-circle"></i></td>
                                             <td class="yes"><i class="fa fa-check-circle"></i></td>
                                             <td class="yes"><i class="fa fa-check-circle"></i></td>
                                             <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        </tr>
+                                        <tr>
+                                            <td> <strong>Web Development</strong> </td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        </tr>
+                                        <tr>
+                                            <td> <strong>Python</strong> </td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        </tr>
+                                        <tr>
+                                            <td> <strong>Roblox Build</strong> </td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="no"><i class="fa fa-times-circle"></i></td>
+                                            <td class="no"><i class="fa fa-times-circle"></i></td>
                                         </tr>
                                     <tr>
                                         <td> <strong>Roblox Code</strong> </td>
@@ -422,28 +436,38 @@
                                         <td class="yes"><i class="fa fa-check-circle"></i></td>
                                     </tr>
                                     <tr>
-                                        <td><strong> Minecraft Mods</strong></td>
+                                        <td><strong>Minecraft Java Mods</strong> </td>
                                         <td class="yes"><i class="fa fa-check-circle"></i></td>
                                         <td class="yes"><i class="fa fa-check-circle"></i></td>
                                         <td class="no"><i class="fa fa-times-circle"></i></td>
                                         <td class="no"><i class="fa fa-times-circle"></i></td>
                                     </tr>
-                                    <td> <strong>Web Development</strong> </td>
-                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
-                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
-                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
-                                    <td class="no"><i class="fa fa-times-circle"></i></td>
-                                </tr>
-                                <tr>
-                                    <td> <strong>Python</strong> </td>
-                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
-                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
-                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
-                                    <td class="no"><i class="fa fa-times-circle"></i></td>
-                                </tr>
+                                    <tr>
+                                        <td><strong>Minecraft Modding: Java</strong> </td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td> <strong>Robotics Online</strong> </td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                    </tr>
+                                    <tr>
+                                        <td> <strong>3D Video Game Design</strong> </td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                    </tr>
                                     </tbody>
                                 </table>
                             </div>
+                            <p>Required for Robotics Online: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                            </p>
                         </div>
                     </article>
                 </div>
