--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -415,6 +415,13 @@
                                             <td class="no"><i class="fa fa-times-circle"></i></td>
                                         </tr>
                                         <tr>
+                                            <td><strong>Minecraft Club</strong> </td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="no"><i class="fa fa-times-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        </tr>
+                                        <tr>
                                             <td> <strong>Roblox Build</strong> </td>
                                             <td class="yes"><i class="fa fa-check-circle"></i></td>
                                             <td class="yes"><i class="fa fa-check-circle"></i></td>
@@ -427,13 +434,6 @@
                                         <td class="yes"><i class="fa fa-check-circle"></i></td>
                                         <td class="no"><i class="fa fa-times-circle"></i></td>
                                         <td class="no"><i class="fa fa-times-circle"></i></td>
-                                    </tr>
-                                    <tr>
-                                        <td><strong>Minecraft Club</strong> </td>
-                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
-                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
-                                        <td class="no"><i class="fa fa-times-circle"></i></td>
-                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Minecraft Java Mods</strong> </td>
@@ -450,7 +450,7 @@
                                         <td class="no"><i class="fa fa-times-circle"></i></td>
                                     </tr>
                                     <tr>
-                                        <td> <strong>Robotics Online</strong> </td>
+                                        <td> <strong>Robotics Online *</strong> </td>
                                         <td class="yes"><i class="fa fa-check-circle"></i></td>
                                         <td class="yes"><i class="fa fa-check-circle"></i></td>
                                         <td class="no"><i class="fa fa-times-circle"></i></td>
@@ -466,7 +466,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <p>Required for Robotics Online: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                            <p>* Required for Robotics Online: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
                             </p>
                         </div>
                     </article>
