--- a/templates/page/FAQ.html
+++ b/templates/page/FAQ.html
@@ -314,22 +314,22 @@
                         </h3>
 
                         <h5 class="h6 questionLink">
-                            <a href="#">How are your classes taught?</a>
+                            <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">How are your classes taught?</a>
                         </h5>
                         <h5 class="h6 questionLink">
-                            <a href="#">Do you have LIVE instruction?</a>
+                            <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Do you have LIVE instruction?</a>
                         </h5>
                         <h5 class="h6 questionLink">
-                            <a href="#">What are the technical requirements? <br> What type of computer does my child need to take class?</a>
+                            <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">What are the technical requirements? <br> What type of computer does my child need to take class?</a>
                         </h5>
                         <h5 class="h6 questionLink">
-                            <a href="#">Can my child use an iPad/Tablet or Chromebook for class?</a>
+                            <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Can my child use an iPad/Tablet or Chromebook for class?</a>
                         </h5>
                         <h5 class="h6 questionLink">
-                            <a href="#">How do I use the portal?</a>
+                            <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">How do I use the portal?</a>
                         </h5>
                         <h5 class="h6 questionLink">
-                            <a href="#">Do you offer sibling discounts?</a>
+                            <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Do you offer sibling discounts?</a>
                         </h5>
 
                     </article>
@@ -339,19 +339,19 @@
                         </h3>
 
                         <h5 class="h6 questionLink">
-                            <a href="#">How many students are in each online class?</a>
+                            <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">How many students are in each online class?</a>
                         </h5>
                         <h5 class="h6 questionLink">
-                            <a href="#">What will my child learn in the online class? Is there homework? </a>
+                            <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">What will my child learn in the online class? Is there homework? </a>
                         </h5>
                         <h5 class="h6 questionLink">
-                            <a href="#">If my child misses a class, can it be made up? Do you record your class sessions?</a>
+                            <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">If my child misses a class, can it be made up? Do you record your class sessions?</a>
                         </h5>
                         <h5 class="h6 questionLink">
-                            <a href="#">I am having technical difficulty, who can I contact for assistance?</a>
+                            <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">I am having technical difficulty, who can I contact for assistance?</a>
                         </h5>
                         <h5 class="h6 questionLink">
-                            <a href="#">Who are the instructors? </a>
+                            <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Who are the instructors? </a>
                         </h5>
 
                         
