--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -343,24 +343,24 @@
                                 </h5>
                                 <ul>
                                     <li>
-                                        <a href="#">How are your classes taught?</a>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">How are your classes taught?</a>
                                     </li>
                                     <li>
-                                        <a href="#">Do you have LIVE instruction?</a>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Do you have LIVE instruction?</a>
                                         
                                     </li>
                                     <li>
-                                        <a href="#">What are the technical requirements? <br>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">What are the technical requirements? <br>
                                             What type of computer does my child need to take class?</a>
                                     </li>
                                     <li>
-                                        <a href="#">Can my child use an iPad/Tablet or Chromebook for class?</a>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Can my child use an iPad/Tablet or Chromebook for class?</a>
                                     </li>
                                     <li>
-                                        <a href="#">How do I use the portal?</a>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">How do I use the portal?</a>
                                     </li>
                                     <li>
-                                        <a href="#">Do you offer sibling discounts?</a>
+                                        <a href="https://shust-hub.github.io/CA/templates/page/quofaq.html">Do you offer sibling discounts?</a>
                                     </li>
                                 </ul>
                             </div>
