--- a/css/style7.scss
+++ b/css/style7.scss
@@ -965,6 +965,7 @@ div.theme-footer-top .pb-testimonial ul>li>div>div.pb-testimonial-cite-up,
 
 article.halfColumn{
   width: 100%;
+  padding: 0 10px;
 }
 
 aside {
@@ -1729,7 +1730,7 @@ aside {
   background-position: 50% 35%; 
   background-size: cover;
   padding:100px 0;
-  background-image:url("/CA/uploads/faq-header.jpg");
+  background-image:url("/CA/uploads/Contacts.jpg");
   .h1{
     margin-top: 170px;
   }
