--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -360,7 +360,7 @@
                         </h4>
                         <ul class="listCheck mb-middle">
                             <li>
-                                <p>Supplement your child’s education with critical STEM/Coding skills not often taught in schools. </p>
+                                <p>Enrich your child’s education with critical STEM/Coding skills not often taught in schools. </p>
                             </li>
                             <li>
                                 <p>Find flexible online coding classes that work your family’s schedule whether you child is remote schooling, in a learning pod, or homeschooling.</p>
@@ -478,7 +478,9 @@
                             <img class="rounded" src="/CA/uploads/Robotics.png" alt="Robotics" width="150"/>
                             <div class="textWithImgBlock__text">
                                 <p class="mt-middle">
-                                    Our <i>My Friends</i>  Online and Private Online learners can also take <strong> LEGO ® – based robotics</strong> classes. These classes are a little different in that they require the purchase of the LEGO® Education WeDo 2.0 Core Set kit (One kit per 1-2 learners). 
+                                    <i>My Friends</i>  Online and Private Online learners can also take <strong> LEGO ® – based robotics</strong> 
+                                    classes. These classes are a little different in that they require the purchase of 
+                                    the LEGO® Education WeDo 2.0 Core Set kit (One kit can be used by 1-2 learners and costs $215). 
                                     For more information, please visit our <a href="#" title="Robotics">Robotics Page</a>.
                                 </p>
                             </div>
