--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -481,7 +481,7 @@
                                     <i>My Friends</i>  Online and Private Online learners can also take <strong> LEGO ® – based robotics</strong> 
                                     classes. These classes are a little different in that they require the purchase of 
                                     the LEGO® Education WeDo 2.0 Core Set kit (One kit can be used by 1-2 learners and costs $215). 
-                                    For more information, please visit our <a href="#" title="Robotics">Robotics Page</a>.
+                                    For more information, please visit our <a href="https://shust-hub.github.io/CA/templates/page/onlinerobotics.html" title="Robotics">Robotics Page</a>.
                                 </p>
                             </div>
                         </div> 
