--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -317,15 +317,16 @@
                         <h5 class="h5 mb-middle">Ages: 8-10*, 10-13*</h5>                        
                         <p>
                             <strong>Note: </strong>
-                            Since these robotics classes require a Lego WEDO 2.0 kit, we can ONLY schedule these classes 
-                            as <a href="#">My Friends Online</a>  or <a href="#">Private Coding</a>.
+                            Since these robotics classes require a Lego WEDO 2.0 kit (One kit can be used by 1-2 learners and costs $215), we can ONLY schedule these classes 
+                            as <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html">My Friends Online</a>  or <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html">Private Coding</a>.
                         </p>
                         <p> <strong> Required for class: Computer (desktop or laptop) and you MUST
                              use a 
                              <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
-                            </strong>
+                            
                             <br>
-                            Price of LEGO® Education WeDo 2.0 Core Set — $214.95
+                            Price of LEGO® Education WeDo 2.0 Core Set — $215
+                        </strong>
                         </p>
                         <p>We’ve seen them in movies, read about them in books, incorporated them in industry, and now even find them as toys. Robots are quickly becoming a huge part of everyday life and we now need to learn how to work with and create these machines.</p>
                         <p>These junior robotics courses will teach children valuable concepts in engineering and physics,
