--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -475,7 +475,9 @@
                             </div>
                         </div>
                         <div class="textWithImgBlock">
-                            <img class="rounded" src="/CA/uploads/Robotics.png" alt="Robotics" width="150"/>
+                            <div>
+                              <img class="rounded" src="/CA/uploads/Robotics.png" alt="Robotics" width="150"/>  
+                            </div>
                             <div class="textWithImgBlock__text">
                                 <p class="mt-middle">
                                     <i>My Friends</i>  Online and Private Online learners can also take <strong> LEGO ® – based robotics</strong> 
