--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -475,7 +475,7 @@
                             </div>
                         </div>
                         <div class="textWithImgBlock">
-                            <div>
+                            <div class="imgWrapper">
                               <img class="rounded" src="/CA/uploads/Robotics.png" alt="Robotics" width="150"/>  
                             </div>
                             <div class="textWithImgBlock__text">
