--- a/templates/page/newtrial.html
+++ b/templates/page/newtrial.html
@@ -348,7 +348,10 @@
                                     </li>
                                 </ul>
                             </div>
-                            <img src="/CA/uploads/girl04_600x423.jpg" alt="girl">
+                            <div class="imgWrapper">
+                                <img src="/CA/uploads/girl04_600x423.jpg" alt="girl">
+                            </div>
+                            
                         </div>
                         <strong>
                             <p>
