--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1303,7 +1303,7 @@ aside {
     width: 100%;
   }
 
-  .textWithImgBlock > img {
+  .textWithImgBlock > img, .textWithImgBlock > .imgWrapper  {
     display: block;
     max-width: 240px;
     margin: 10px auto 15px;
