--- a/css/style7.css
+++ b/css/style7.css
@@ -4330,7 +4330,12 @@ aside {
   .textWithImgBlock .textWithImgBlock__text {
     width: 100%;
   }
-  .textWithImgBlock > img, .textWithImgBlock > .imgWrapper {
+  .textWithImgBlock > img {
+    display: block;
+    max-width: 240px;
+    margin: 10px auto 15px;
+  }
+  .textWithImgBlock > .imgWrapper {
     display: block;
     max-width: 240px;
     margin: 10px auto 15px;
