--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1309,8 +1309,7 @@ aside {
     margin: 10px auto 15px;
   }
 
-  .textWithImgBlock > .imgWrapper  {
-    display: block;
+  .textWithImgBlock .imgWrapper  {
     max-width: 240px;
     margin: 10px auto 15px;
   }
