--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1265,16 +1265,19 @@ aside {
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+  .imgWrapper  {
+    max-width: 240px;
+    margin-right: 25px;
+  }
+  img {
+    max-width: 240px;
+    margin-right: 25px;
+  }
 }
 
 .textWithImgBlock > .imgWithCaptionBlock {
   width: 20%;
   min-width: 240px;
-  margin-right: 25px;
-}
-
-.textWithImgBlock > img {
-  max-width: 240px;
   margin-right: 25px;
 }
 
@@ -1293,6 +1296,11 @@ aside {
 @media only screen and (max-width: 767px){
   .textWithImgBlock{
     display: block;
+
+    .imgWrapper  {
+      max-width: 240px;
+      margin: 10px auto 15px;
+    }
   }
   .textWithImgBlock > .imgWithCaptionBlock {
     width: 100%;
@@ -1308,12 +1316,6 @@ aside {
     max-width: 240px;
     margin: 10px auto 15px;
   }
-
-  .textWithImgBlock .imgWrapper  {
-    max-width: 240px;
-    margin: 10px auto 15px;
-  }
-}
 
 .socLinksBlock{
   display: flex;
