--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1300,6 +1300,11 @@ aside {
     .imgWrapper  {
       max-width: 240px;
       margin: 10px auto 15px;
+
+      img{
+        max-width: 240px;
+        margin: 10px auto 15px;
+      }
     }
   }
   .textWithImgBlock > .imgWithCaptionBlock {
@@ -1309,12 +1314,6 @@ aside {
   
   .textWithImgBlock .textWithImgBlock__text {
     width: 100%;
-  }
-
-  .textWithImgBlock > img{
-    display: block;
-    max-width: 240px;
-    margin: 10px auto 15px;
   }
 
 .socLinksBlock{
