--- a/css/style7.css
+++ b/css/style7.css
@@ -4336,6 +4336,11 @@ aside {
     margin: 0 auto;
     display: block;
   }
+  .textWithImgBlock img {
+    max-width: 240px;
+    margin: 10px auto 15px;
+    display: block;
+  }
 }
 
 .textWithImgBlock > .imgWithCaptionBlock {
