--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1306,6 +1306,12 @@ aside {
         display: block;
       }
     }
+
+    img{
+      max-width: 240px;
+      margin: 10px auto 15px;
+      display: block;
+    }
   }
 }
   .textWithImgBlock > .imgWithCaptionBlock {
