--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -313,29 +313,26 @@
                 <div class="rows">
                     <article>
                         <h3 class="h3">Robotics Online Classes</h3>
-                        <h5 class="h5">Grades: 3rd-5th</h5>
+                        <h5 class="h5">Grades: 3rd-5th,  6th-8th</h5>
                         <h5 class="h5 mb-middle">Ages: 8-10*, 10-13*</h5>                        
                         <p>
                             <strong>Note: </strong>
-                            Since these robotics classes require a Lego WEDO 2.0 kit (One kit can be used by 1-2 learners and costs $215), we can ONLY schedule these classes 
+                            We can ONLY schedule these classes as
                             as <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html">My Friends Online</a>  or <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html">Private Coding</a>.
                         </p>
-                        <p> <strong> Required for class: Computer (desktop or laptop) and you MUST
-                             use a 
-                             <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
-                            
-                            <br>
-                            Price of LEGO® Education WeDo 2.0 Core Set — $215
+                        <p> <strong> Required for class: Computer (desktop or laptop) and you MUST use a
+                             <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a> (One kit can be used by 1-2 learners and costs $215)
                         </strong>
                         </p>
-                        <p>We’ve seen them in movies, read about them in books, incorporated them in industry, and now even find them as toys. Robots are quickly becoming a huge part of everyday life and we now need to learn how to work with and create these machines.</p>
-                        <p>These junior robotics courses will teach children valuable concepts in engineering and physics,
-                             allow them to experiment with their ideas, expose them to the process of designing a product 
-                             to complete a specific job, and show them that many times there is more than one correct
-                              solution to the same problem.</p>
                         <p>
-                            While working in design teams, students will take on roles of different engineers. Together they will build and program their robot to conquer the challenge given.
+                            We’ve seen them in movies, read about them in books, incorporated them in industry, and now even find them as toys. Robots are quickly becoming a huge part of everyday life and we now need to learn how to work with and create these machines.
                         </p>
+                        <p>
+                            These junior robotics courses will teach children valuable concepts in engineering and physics, allow them to experiment with their ideas, and utilize the process of designing a product to complete a specific job. 
+                        </p>
+                        {# <p>
+                            While working in design teams, students will take on roles of different engineers. Together they will build and program their robot to conquer the challenge given.
+                        </p> #}
                         <p>
                             Your kids will love our LEGO ® – based robotics classes – all designed by a robotic controls engineer with a background in aerospace and physics.
                         </p>
@@ -468,14 +465,14 @@
                 <div class="rows">
                     <article>
                         <div class="pb-text" id="CampsSchedule">
-                            <h5>1 Week Camps (2 hours/day)</h5>
+                            {# <h5>1 Week Camps (2 hours/day)</h5>
                                 <p>
                                     Don’t see a week that works for your schedule? <a href="/online-coding-classes-for-kids#CreateYourOwn">Create your Own Camp
                                     </a>.                        
                                 </p>
                                 <p>
                                     <span style="color: green">Allowed in this class: Computer (desktop or laptop)</span>            
-                                </p>
+                                </p> #}
                                 <div id="responsiveTable">
                                 <table style="width: 100%;" class="table table-responsive">
                                     <thead>
@@ -513,6 +510,14 @@
                                                 TBD									
                                             </td>
                                             <td>  
+                                                <div class="pb-button pb-button-size-small">
+                                                    <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" class="pb-window-target-self" 
+                                                    data-id="">
+                                                        <span class="pb-button-box">
+                                                            <span class="pb-button-content"> Sign Up</span>
+                                                        </span>
+                                                    </a>
+                                                </div>
                                             </td>
                                         </tr>
                                         <tr>
