--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -330,9 +330,6 @@
                         <p>
                             These junior robotics courses will teach children valuable concepts in engineering and physics, allow them to experiment with their ideas, and utilize the process of designing a product to complete a specific job. 
                         </p>
-                        {# <p>
-                            While working in design teams, students will take on roles of different engineers. Together they will build and program their robot to conquer the challenge given.
-                        </p> #}
                         <p>
                             Your kids will love our LEGO ® – based robotics classes – all designed by a robotic controls engineer with a background in aerospace and physics.
                         </p>
@@ -370,10 +367,11 @@
                         </div>
                         <div class="sideBanner">
                             <div class="sideBanner__up">
-                                <div style="padding:56.25% 0 0 0;position:relative;">
-                                    <iframe src="https://player.vimeo.com/video/237738680" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                                <div>
+                                    <a href="https://youtu.be/k5vWJxdiuz4">
+                                        <img src="/CA/uploads/boy_600x423.jpg" alt="">
+                                    </a>
                                 </div>
-                                <script src="https://player.vimeo.com/api/player.js"></script>
                             </div>
                             <div class="sideBanner__down">
                                 <form action="" id="onlineEmail">
@@ -465,14 +463,6 @@
                 <div class="rows">
                     <article>
                         <div class="pb-text" id="CampsSchedule">
-                            {# <h5>1 Week Camps (2 hours/day)</h5>
-                                <p>
-                                    Don’t see a week that works for your schedule? <a href="/online-coding-classes-for-kids#CreateYourOwn">Create your Own Camp
-                                    </a>.                        
-                                </p>
-                                <p>
-                                    <span style="color: green">Allowed in this class: Computer (desktop or laptop)</span>            
-                                </p> #}
                                 <div id="responsiveTable">
                                 <table style="width: 100%;" class="table table-responsive">
                                     <thead>
