--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -368,7 +368,7 @@
                         <div class="sideBanner">
                             <div class="sideBanner__up">
                                 <div>
-                                    <a href="https://www.youtube.com/watch?v=k5vWJxdiuz4">
+                                    <a class="vp-a" style="height: 100%; width: 100%;" href="https://www.youtube.com/watch?v=YVH1QVftvpo">
                                         <img src="/CA/uploads/boy_600x423.jpg" alt="">
                                     </a>
                                 </div>
