--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -369,7 +369,7 @@
                             <div class="sideBanner__up">
                                 <div>
                                     <a class="vp-a" style="height: 100%; width: 100%;" href="https://www.youtube.com/watch?v=k5vWJxdiuz4">
-                                        <img src="/CA/uploads/boy_600x423.jpg" alt="">
+                                        <img src="/CA/uploads/vc-play2.jpg" alt="Robotics Online">
                                     </a>
                                 </div>
                             </div>
