--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -330,6 +330,7 @@
                         <p>
                             These junior robotics courses will teach children valuable concepts in engineering and physics, allow them to experiment with their ideas, and utilize the process of designing a product to complete a specific job. 
                         </p>
+                        <p>While working in design teams, students will take on roles of different engineers. Together they will build and program their robot to conquer the challenge given.</p>
                         <p>
                             Your kids will love our LEGO ® – based robotics classes – all designed by a robotic controls engineer with a background in aerospace and physics.
                         </p>
