--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -515,7 +515,7 @@
 
                         <div class="sideBanner">
                             <div class="sideBanner__up">
-                                <a class="vp-a" href="https://www.youtube.com/watch?v=YVH1QVftvpo">
+                                <a class="vp-a" href="https://www.youtube.com/watch?v=oN8d-BSFaHM">
                                     <img class="vp-img" src="/CA/uploads/vc-play3.png"  alt="CA Online Classes">
                                 </a>
                             </div>
