--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -5411,7 +5411,7 @@
                             <div class="imgWithCaptionBlock">
                                 <img src="/CA/uploads/Rebecca-Mancini.jpg" alt="Rebecca Mancini"/>
                                 <div class="imgWithCaptionBlock__title">
-                                    <a target="_blank">Erica Chodkowski</a>
+                                   <h5 class="h5">Erica Chodkowski</h5>     
                                     <p>Principal of our Virtual classes</p>
                                 </div>
                             </div>
