--- a/css/style7.css
+++ b/css/style7.css
@@ -4336,7 +4336,7 @@ aside {
     margin: 0 auto;
     display: block;
   }
-  .textWithImgBlock img {
+  .textWithImgBlock > img {
     max-width: 240px;
     margin: 10px auto 15px;
     display: block;
@@ -4347,7 +4347,6 @@ aside {
   }
   .textWithImgBlock .textWithImgBlock__text {
     width: 100%;
-    max-width: 240px;
   }
 }
 
