--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1307,11 +1307,18 @@ aside {
       }
     }
 
-    img{
-      max-width: 240px;
-      margin: 10px auto 15px;
-      display: block;
-    }
+    // img{
+    //   max-width: 240px;
+    //   margin: 10px auto 15px;
+    //   display: block;
+    // }
+  }
+
+  
+  .textWithImgBlock > img {
+    max-width: 240px;
+    margin: 10px auto 15px;
+    display: block;
   }
 
   .textWithImgBlock > .imgWithCaptionBlock {
@@ -1321,7 +1328,6 @@ aside {
   
   .textWithImgBlock .textWithImgBlock__text {
     width: 100%;
-    max-width: 240px;
   }
 }
 
