--- a/css/style7.css
+++ b/css/style7.css
@@ -4353,6 +4353,11 @@ aside {
   }
   .imgWithCaptionBlock .imgWithCaptionBlock__title {
     max-width: 240px;
+    margin: 0 auto;
+  }
+  .imgWithCaptionBlock > img {
+    max-width: 240px;
+    margin: 0 auto;
   }
 }
 
