--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1330,6 +1330,12 @@ aside {
 
   .imgWithCaptionBlock .imgWithCaptionBlock__title{
     max-width: 240px;
+    margin: 0 auto;
+  }
+
+  .imgWithCaptionBlock > img{
+    max-width: 240px;
+    margin: 0 auto;
   }
 }
 
