--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1739,7 +1739,10 @@ aside {
   background-position: 50% 35%; 
   background-size: cover;
   padding:100px 0;
-
+  height: 400px!important;
+  .h1{
+    margin-top: 170px;
+  }
   @media only screen and (max-width: 767px){
     background-image:url("/CA/uploads/private-classes-header.jpg"); 
   }
