--- a/css/style7.css
+++ b/css/style7.css
@@ -4783,6 +4783,11 @@ aside {
   background-position: 50% 35%;
   background-size: cover;
   padding: 100px 0;
+  height: 400px !important;
+}
+
+.privateClassesPage .h1 {
+  margin-top: 170px;
 }
 
 @media only screen and (max-width: 767px) {
