--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1740,7 +1740,7 @@ aside {
   background-size: cover;
   padding:100px 0;
   height: 500px!important;
-  .h1{
+  h1{
     margin-top: 200px;
   }
   @media only screen and (max-width: 767px){
