--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -472,11 +472,15 @@
                             </div>
                         </div>
                         <div class="textWithImgBlock">
-                            <img class="rounded" src="/CA/uploads/Robotics.png" alt="Robotics" width="150"/>
+                            <div class="imgWrapper">
+                              <img class="rounded" src="/CA/uploads/Robotics.png" alt="Robotics" width="150"/>  
+                            </div>
                             <div class="textWithImgBlock__text">
                                 <p class="mt-middle">
-                                    Our Private Online and <i>My Friends</i> Online can also take <strong>LEGO ® – based robotics </strong> classes. These classes are a little different in that they require the purchase of the LEGO® Education WeDo 2.0 Core Set kit (One kit per 1-2 learners). 
-                                    For more information, please visit our <a href="#" title="Robotics">Robotics Page</a>.
+                                    <i>My Friends</i>  Online and Private Online learners can also take <strong> LEGO ® – based robotics</strong> 
+                                    classes. These classes are a little different in that they require the purchase of 
+                                    the LEGO® Education WeDo 2.0 Core Set kit (One kit can be used by 1-2 learners and costs $215). 
+                                    For more information, please visit our <a href="https://shust-hub.github.io/CA/templates/page/onlinerobotics.html" title="Robotics">Robotics Page</a>.
                                 </p>
                             </div>
                         </div> 
